--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,11 @@ flutter:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/coin.png
+    - assets/images/menu.png
+    - assets/images/tomato.png
+    - assets/images/group.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
