--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="miles"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/chicken">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
