🤔add gived up page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ flutter:
     - assets/images/group.png
     - assets/images/rollback.png
     - assets/images/skeleton.png
+    - assets/images/stop.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
