--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ flutter:
     - assets/images/rollback.png
     - assets/images/skeleton.png
     - assets/images/stop.png
+    - assets/images/break.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
