📃add the result page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,10 @@ flutter:
     - assets/images/skeleton.png
     - assets/images/stop.png
     - assets/images/break.png
+    - assets/images/time.png
+    - assets/images/multiply.png
+    - assets/images/exclamation.png
+    - assets/images/milestone.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
