🍌Optimize the page before result

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ flutter:
     - assets/images/germany.png
     - assets/images/japan.png
     - assets/images/french.png
+    - assets/images/notice.png
 
 
 
