--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
     - assets/images/japan.png
     - assets/images/french.png
     - assets/images/notice.png
+    - assets/images/background.png
 
 
 
