--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ flutter:
     - assets/images/french.png
     - assets/images/notice.png
     - assets/images/background.png
+    - assets/images/word.png
 
 
 
