✒ 朋友圈功能

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,9 @@ flutter:
     - assets/images/notice.png
     - assets/images/background.png
     - assets/images/word.png
+    - assets/images/weekbin.png
+    - assets/images/RonYou.png
+    
 
 
 
